<resources>
    <string name="app_name">KidsLearning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">login</string>
    <string name="swipe_left_for_register">New user? Sign UP</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="swipe_right_for_login">To Login</string>
    <string name="register">Register</string>
    <string name="your_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="alphabet">Alphabet</string>
    <string name="color">Color</string>
    <string name="settings">Settings</string>
    <string name="remember_me">Remember_me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Change Language: </string>
    <string name="please_share_with_your_friends">please share with your friends</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">english</string>
    <string name="arabic">arabic</string>
    <string name="setting">Setting</string>
    <string name="welcome_kids">Welcome,Kids</string>
    <string name="repeat_your_kids">Repeat your kids</string>
    <string name="send">Send</string>
    <!--    <string-array name="language">-->
    <!--        <item>Arabic</item>-->
    <!--        <item>English</item>-->
    <!--    </string-array>-->
</resources>