<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".learning.Setting">



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        app:cardCornerRadius="34dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:src="@drawable/user"
                tools:ignore="MissingClass" />

            <TextView
                android:id="@+id/usernameSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_user"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/berlinlight"
                android:gravity="center"
                android:text="User Name"
                android:textColor="@color/colorBlueDark"
                android:textSize="20sp" />



            <TextView
                android:id="@+id/emilSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameSetting"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/berlinsans"
                android:gravity="center"
                android:padding="4dp"
                android:text="Emil"
                android:textColor="@color/colorBlueDark"
                android:textSize="22sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Switch
            android:id="@+id/switchtheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="350dp"
            android:minHeight="48dp"
            android:text="@string/dark_mode"
            android:textColor="@color/colorBlueDark"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:text="@string/language"
            android:textColor="@color/colorBlueDark"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_lang"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="400dp"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="455dp"
            android:text="@string/please_share_with_your_friends"
            android:textColor="@color/colorBlueDark"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/contact"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/contact"
            android:background="@drawable/share"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/mChangeLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:layout_marginTop="500dp"
            android:backgroundTint="@color/white"
            android:text="change language"
            android:textColor="@color/colorBlueDark"/>

        <Button
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/contact"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="#E40416"
            android:textSize="20sp" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
