<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/backGroundAll"
    tools:context=".learning.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/header_bg"
        android:padding="12dp"
        >
        <ImageView
            android:id="@+id/tv_title"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo1" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">


        <TextView
            android:id="@+id/welcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/berlinsans"
            android:text="@string/welcome_kids"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorPink"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" kids"
            android:layout_marginEnd="5dp"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:fontFamily="@font/berlinsans"
            android:textColor="@color/colorPink"
            android:textSize="18sp"
            />
</LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:padding="16dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/card_alphabet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:layout_margin="12dp"
                android:background="@color/backGroundAll"
                tools:ignore="NestedWeights">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/backGroundWhite"

                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/abc"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alphabet"
                        android:textColor="@color/colorPink"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:fontFamily="@font/berlinsans"

                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_Repeat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:background="@color/backGroundAll"
                android:layout_margin="12dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/backGroundWhite"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/read"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_your_kids"
                        android:textColor="@color/colorPink"                        android:layout_marginTop="8dp"

                        android:fontFamily="@font/berlinsans"
                        android:textAlignment="center"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:padding="16dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/card_Color"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:background="@color/backGroundAll"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/backGroundWhite"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/ball"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/color"
                        android:textColor="@color/colorPink"                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/berlinsans"
                        android:textAlignment="center" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_setting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:background="@color/backGroundAll"
                android:layout_margin="12dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/backGroundWhite"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/settings"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:textColor="@color/colorPink"                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/berlinsans"
                        android:textAlignment="center"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>